add room feature
